--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <!-- Favicon -->
+    <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico' />
+    <title>Love Maths</title>
 </head>
 
 <body>
